--- a/app.json
+++ b/app.json
@@ -1,16 +1,15 @@
 {
     "name": "𝐓𝐞𝐱𝐭 𝐋𝐞𝐞𝐜𝐡",
     "description": "𝑻𝒆𝒙𝒕 𝑳𝒆𝒆𝒄𝒉 𝑽𝒊𝒅𝒆𝒐 𝑬𝒙𝒕𝒓𝒂𝒄𝒕𝒐𝒓 𝑭𝒐𝒓 𝑻𝒆𝒍𝒆𝒈𝒓𝒂𝒎",
-  
+    "logo": "https://github.com/nikhilsainiop/saini-txt-direct/blob/main/SAINIBOTSLOGO.svg",
     "keywords": [
         "text-video",
         "video-extract",
         "pyrogram"
     ],
-    "logo": "https://github.com/nikhilsainiop/saini-txt-direct/blob/main/SAINIBOTSLOGO.svg",
     "repository": "https://github.com/nikhilsainiop/Saini-txt-direct",
-    "success_url": "/welcome",
-    "stack": "heroku-24",
+    "success_url": "https://github.com/nikhilsainiop/Saini-txt-direct",
+    "stack": "container",
     "env": {
         "API_ID": {
             "description": "𝑬𝒏𝒕𝒆𝒓 𝒀𝒐𝒖𝒓 𝑨𝒑𝒊 𝑰𝑫",
@@ -27,6 +26,7 @@
             "value": "",
             "required": true
         },
+    },
     "addons": [],
     "buildpacks": [
         {
