--- a/app.json
+++ b/app.json
@@ -33,10 +33,13 @@
   "addons": [],
   "buildpacks": [
     {
-      "url": "heroku/python"
-    },
-    {
-      "url": "https://github.com/heroku/heroku-buildpack-activestorage-preview"
+      "url": "https://github.com/amivin/aria2-heroku.git"
+    },
+    {
+      "url": "heroku/python"
+    },       
+    {
+      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
     }
   ],
   "environments": {
