--- a/app.json
+++ b/app.json
@@ -1,52 +1,47 @@
 {
-  "name": "𝐓𝐞𝐱𝐭 𝐋𝐞𝐞𝐜𝐡",
-  "description": "𝑻𝒆𝒙𝒕 𝑳𝒆𝒆𝒄𝒉 𝑽𝒊𝒅𝒆𝒐 𝑬𝒙𝒕𝒓𝒂𝒄𝒕𝒐𝒓 𝑭𝒐𝒓 𝑻𝒆𝒍𝒆𝒈𝒓𝒂𝒎",
-  "keywords": [
-    "text-video",
-    "video-extract",
-    "pyrogram"
-  ],
-  "website": "https://github.com/nikhilsainiop/",
-  "repository": "https://github.com/nikhilsainiop/Saini-txt-direct",
-  "logo": "https://github.com/nikhilsainiop/saini-txt-direct/blob/main/SAINIBOTSLOGO.svg",
-  "success_url": "/welcome",
-  "stack": "heroku-24",
-  "env": {
+    "name": "Drm Uploader By 🅱🅴🅰🆂🆃 👑",
+    "description": "DRM Uploader",
+    "logo": "https://tinypic.host/image/Screenshot-2025-03-19-06-40-21-30.3gKoOw",
+    "keywords": [
+        "text-video",
+        "video-extract",
+        "pyrogram"
+    ],
+    "repository": "https://github.com/Chiru63019/saini-txt-direct-new",
+    "success_url": "https://telegram.me/skillwithchiru",
+    "stack": "container",
+    "env": {
         "API_ID": {
-            "description": "𝑬𝒏𝒕𝒆𝒓 𝒀𝒐𝒖𝒓 𝑨𝒑𝒊 𝑰𝑫",
+            "description": "enter_your_api_id",
+            "value": "",
             "required": true
         },
         "API_HASH": {
-            "description": "𝑬𝒏𝒕𝒆𝒓 𝒀𝒐𝒖𝒓 𝑨𝒑𝒊 𝑯𝒂𝒔𝒉",
+            "description": "enter_your_api_harsh",
+            "value": "",
             "required": true
         },
         "BOT_TOKEN": {
-            "description": "𝑬𝒏𝒕𝒆𝒓 𝒀𝒐𝒖𝒓 𝑩𝒐𝒕 𝑻𝒐𝒌𝒆𝒏",
+            "description": "Enter your bot token",
+            "value": "",
             "required": true
         },
-        "OWNER_ID": {
-            "description": "𝑼𝒔𝒆𝒓 𝑰𝑫 𝑶𝒇 𝑩𝒐𝒕 𝑶𝒘𝒏𝒆𝒓",
+        "token_cp":{
+            "description": "Enter your classplus token",
+            "value": "",
             "required": true
         }
-   },
-  "image": "heroku/python",
-  "addons": [],
-  "buildpacks": [
-    {
-      "url": "https://github.com/amivin/aria2-heroku.git"
     },
-    {
-      "url": "heroku/python"
-    },
-    {
-      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+    "addons": [],
+    "buildpacks": [
+        {
+            "url": "https://github.com/amivin/aria2-heroku.git"
+        },
+        {
+            "url": "heroku/python"
+        },       
+        {
+            "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+        }
+    ]
     }
-  ],
-  "environments": {
-    "test": {
-      "scripts": {
-        "test": "bundle exec rake test"
-      }
-    }
-  }
-}
