--- a/app.json
+++ b/app.json
@@ -1,33 +1,33 @@
 {
-    "name": "Drm Uploader By 🅱🅴🅰🆂🆃 👑",
-    "description": "DRM Uploader",
-    "logo": "https://tinypic.host/image/Screenshot-2025-03-19-06-40-21-30.3gKoOw",
+    "name": "𝐒𝐀𝐈𝐍𝐈 𝐓𝐗𝐓 𝐁𝐎𝐓",
+    "description": "𝑻𝒆𝒙𝒕 𝑳𝒆𝒆𝒄𝒉 𝑽𝒊𝒅𝒆𝒐 𝑬𝒙𝒕𝒓𝒂𝒄𝒕𝒐𝒓 𝑭𝒐𝒓 𝑻𝒆𝒍𝒆𝒈𝒓𝒂𝒎",
+    "logo": "https://tinypic.host/images/2025/04/28/IMG_20250428_085026_585.jpg",
     "keywords": [
         "text-video",
         "video-extract",
         "pyrogram"
     ],
-    "repository": "https://github.com/Chiru63019/saini-txt-direct-new",
-    "success_url": "https://telegram.me/skillwithchiru",
+    "repository": "https://github.com/nikhilsainiop/saini-txt-direct",
+    "success_url": "https://t.me/saini_contact_bot",
     "stack": "container",
     "env": {
         "API_ID": {
-            "description": "enter_your_api_id",
+            "description": "𝑬𝒏𝒕𝒆𝒓 𝒀𝒐𝒖𝒓 𝑨𝒑𝒊 𝑰𝑫",
             "value": "",
             "required": true
         },
         "API_HASH": {
-            "description": "enter_your_api_harsh",
+            "description": "𝑬𝒏𝒕𝒆𝒓 𝒀𝒐𝒖𝒓 𝑨𝒑𝒊 𝑯𝒂𝒔𝒉",
             "value": "",
             "required": true
         },
         "BOT_TOKEN": {
-            "description": "Enter your bot token",
+            "description": "𝑬𝒏𝒕𝒆𝒓 𝒀𝒐𝒖𝒓 𝑩𝒐𝒕 𝑻𝒐𝒌𝒆𝒏",
             "value": "",
             "required": true
         },
         "token_cp":{
-            "description": "Enter your classplus token",
+            "description": "𝘌𝘯𝘵𝘦𝘳 𝘞𝘰𝘳𝘬𝘪𝘯𝘨 𝘊𝘭𝘢𝘴𝘴𝘱𝘭𝘶𝘴 𝘛𝘰𝘬𝘦𝘯",
             "value": "",
             "required": true
         }
