--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "𝐒𝐀𝐈𝐍𝐈 𝐓𝐗𝐓 𝐁𝐎𝐓",
+    "name": "saini-txt-bot",
     "description": "𝑻𝒆𝒙𝒕 𝑳𝒆𝒆𝒄𝒉 𝑽𝒊𝒅𝒆𝒐 𝑬𝒙𝒕𝒓𝒂𝒄𝒕𝒐𝒓 𝑭𝒐𝒓 𝑻𝒆𝒍𝒆𝒈𝒓𝒂𝒎",
     "logo": "https://tinypic.host/images/2025/04/28/IMG_20250428_085026_585.jpg",
     "keywords": [
