--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: SAINI TXT DIRECT 
+    name: saini-txt-direct
     plan: free
     env: docker
     dockerfilePath: Dockerfile
@@ -13,6 +13,10 @@ services:
       - key: API_ID
         sync: false
       - key: API_HASH
+        sync: false
+      - key: OWNER
+        sync: false
+      - key: CREDIT
         sync: false
       #- key: WEBHOOK
         #sync: false
