--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
-    "name": "saini-txt-bot",
+    "name": "𝐒𝐚𝐢𝐧𝐢 𝐓𝐱𝐭 𝐋𝐞𝐞𝐜𝐡 𝐁𝐨𝐭",
     "description": "𝑻𝒆𝒙𝒕 𝑳𝒆𝒆𝒄𝒉 𝑽𝒊𝒅𝒆𝒐 𝑬𝒙𝒕𝒓𝒂𝒄𝒕𝒐𝒓 𝑭𝒐𝒓 𝑻𝒆𝒍𝒆𝒈𝒓𝒂𝒎",
-    "logo": "https://tinypic.host/images/2025/04/28/IMG_20250428_085026_585.jpg",
+    "logo": "https://graph.org/file/6307bea2182f82424bf90-e2f24f59f49a97b6c8.jpg",
     "keywords": [
         "text-video",
         "video-extract",
         "pyrogram"
     ],
     "repository": "https://github.com/nikhilsainiop/saini-txt-direct",
-    "success_url": "https://t.me/saini_contact_bot",
+    "success_url": "https://graph.org/file/6307bea2182f82424bf90-e2f24f59f49a97b6c8.jpg",
     "stack": "container",
     "env": {
         "API_ID": {
@@ -35,6 +35,12 @@
             "description": "𝙀𝙣𝙩𝙚𝙧 𝘾𝙧𝙚𝙙𝙞𝙩 𝙉𝙖𝙢𝙚 𝙞𝙣 𝙖𝙡𝙢𝙤𝙨𝙩 6-8 𝙡𝙚𝙩𝙩𝙚𝙧𝙨",
             "value": "𝙎𝘼𝙄𝙉𝙄 𝘽𝙊𝙏𝙎",
             "required": true
+        }
+    },
+    "formation": {
+        "worker": {
+            "quantity": 1,
+            "size": "standard-2x"
         }
     },
     "addons": [],
